# conservative-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
api/: main.py
api/routes/: backtests.py  bot.py  data.py
bot/: cli.py  config.py
bot/backtest/: engine.py  metrics.py  optimize.py
bot/data/: exchange.py  store.py
bot/engine/: live_manager.py  okx_broker.py  runner.py
bot/indicators/: base.py  classic.py  frvp.py
bot/persistence/: db.py
bot/scoring/: scorer.py
bot/strategy/: manager.py  models.py  setup.py
config/: config.yaml  profiles.yaml
tests/: conftest.py  test_backtest.py  test_bot_control.py  test_entry.py  test_indicators.py  test_manager.py  test_okx_broker.py  test_optimize.py  test_setup.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  main.tsx  state.tsx
web/src/components/: BotPanel.tsx  FillsDetail.tsx  charts.tsx  ui.tsx
web/src/pages/: ActiveTrades.tsx  Backtest.tsx  Dashboard.tsx  History.tsx  Pnl.tsx  Simulacion.tsx
